parser/src/tests/corpus/negatives/bare-inquiry/expected
Error 1/1: Pure expressions cannot contain inquire/evoke effects: Inquire(Universal(Ref("x")))
In source "negatives/bare-inquiry/input", line 1:
  $x
  ^^
